@@ -1,3 +1,10 @@
+2011-06-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* driver/pocc/driver-clastops.c: Fix a compilation warning.
+
+	* src/options.h,
+	* src/options.c: Provide option --ptile by default.
+
 2011-06-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* driver/pocc/driver-codegen.c: Bypass Pluto's generated OpenMP
